2017-06-19  Enrico Schumann  <es@enricoschumann.net>

	* README.md: add file

	* man/*: update docs

2017-06-14  Enrico Schumann  <es@enricoschumann.net>

	* inst/unitTests/ut_datetime.R: fix unit tests,
	as many were broken because of the renaming of
	functions for version 0.2-0

2017-05-08  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.2-0

	* R/functions.R: *BACKWARD* *INCOMPATIBLE* *CHANGES*:
	rename functions:

	convertDate   => convert_date
        convertTZ     => convert_tz
        dayOfMonth    => "day_of_month<-"
        dayOfMonth    => day_of_month
        endOfMonth    => end_of_month
        endOfPreviousMonth => end_of_previous_month
        endOfYear     => end_of_year
        firstOfMonth  => first_of_month
        firstOfYear   => first_of_year
        isBusinessDay => is_businessday
        isLeapyear    => is_leapyear
        isWeekend     => is_weekend
        lastWeekday   => last_weekday
        nextBDay      => next_bday
        nextBusinessDay => next_businessday
        nthWeekday    => nth_weekday
        prevBDay      => prev_bday
        previousBusinessDay => previous_businessday

2017-01-26  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Description): expand package
	description

2016-10-08  Enrico Schumann  <es@enricoschumann.net>

	* man/ update documentation; create separate
	help pages for various functions

2016-10-05  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-5

	* R/functions.R (prevBDay, nextBDay):
	short-hands for 'previousBusinessDay' and
	'nextBusinessDay'

2016-07-07  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-4

	* R/functions.R (isBusinessDay): new function
	(nthWeekday): fixed -- the function had failed
	because it had relied on POSIXlt's 'wday',
	which is not updated when the POSIXlt object is
	manipulated

	* man/isWeekend.Rd: separate help page

2016-05-11  Enrico Schumann  <es@enricoschumann.net>
